fix modal, added photos

--- a/client/aboutUs.html
+++ b/client/aboutUs.html
@@ -185,7 +185,7 @@
                             </div>
                         </div>
                          <div class="officer-card">
-                            <img src="assets/ESTIMAR.png" alt="Asst. PIO">
+                            <img src="assets/ESTIMAR.O" alt="Asst. PIO">
                              <div class="officer-info">
                                 <h4>ASST. PIO</h4>
                                 <p class="name">Estimar</p>
@@ -215,7 +215,7 @@
 
                     <div class="officer-row cols-1">
                         <div class="officer-card">
-                            <img src="assets/FUNTECHA.png" alt="Adviser">
+                            <img src="assets/FUNTECHA.jpg" alt="Adviser">
                              <div class="officer-info">
                                 <h4>ADVISER</h4>
                                 <p class="name">Funtecha</p>
