--- a/client/index.html
+++ b/client/index.html
@@ -83,6 +83,7 @@
             <div class="modal-content">
                 <button id="event-modal-close-btn" class="modal-close-btn" aria-label="Close modal">×</button>
                 <h2 id="event-modal-title">Event Title</h2>
+                <p id="event-modal-datetime" class="modal-datetime"></p>
                 <p id="event-modal-description">Event description goes here.</p>
             </div>
         </div>
