--- a/client/aboutUs.html
+++ b/client/aboutUs.html
@@ -268,5 +268,31 @@
     </footer>
 
     <script src="mobile-nav.js"></script>
+    <script>
+        // Blur effect on scroll for officer cards
+        document.addEventListener('DOMContentLoaded', () => {
+            const observerOptions = {
+                root: null,
+                rootMargin: '0px',
+                threshold: [0, 0.25, 0.5, 0.75, 1]
+            };
+
+            const handleIntersect = (entries) => {
+                entries.forEach(entry => {
+                    if (entry.intersectionRatio < 0.5) {
+                        entry.target.classList.add('blur-on-scroll');
+                    } else {
+                        entry.target.classList.remove('blur-on-scroll');
+                    }
+                });
+            };
+
+            const observer = new IntersectionObserver(handleIntersect, observerOptions);
+
+            // Observe all officer cards
+            const officerCards = document.querySelectorAll('.officer-card');
+            officerCards.forEach(card => observer.observe(card));
+        });
+    </script>
 </body>
 </html>
